--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,13 @@
     "cors": "^2.8.4",
     "eslint": "^5.6.1",
     "express": "^4.16.4",
+    "joi": "^13.7.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "sequelize": "^4.39.0",
+    "sqlite": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.4"
   }
 }
