--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
+    "morgan": "^1.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
