--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.4",
     "morgan": "^1.9.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.2.9"
   },
   "devDependencies": {
+    "@mdi/font": "^2.8.94",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -55,6 +57,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "material-design-icons-iconfont": "^3.0.3",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
