--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "morgan": "^1.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.2.9"
+    "vuetify": "^1.2.9",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@mdi/font": "^2.8.94",
